--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,12 +1,19 @@
-bind-key h swap-window -t -1
-bind-key l swap-window -t +1
-
+# better prefix
 set-option -g prefix C-a
 bind-key C-a last-window
 
-set -g default-terminal "screen-256color"
+# moving windows
+bind-key h swap-window -t -1\; select-window -t -1
+bind-key l swap-window -t +1\; select-window -t +1
 
-set-option -g status-bg green
+# make it more pleasant
+set -g default-terminal "tmux-256color"
+
+# Configure the catppuccin plugin
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_window_current_text "#{window_name}"
+set -g @catppuccin_window_text "#{window_name}"
 
 # Use vim-like selection and  yanking
 setw -g mode-keys vi
@@ -16,10 +23,22 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
+set -g @plugin 'catppuccin/tmux#v2.1.2' # See https://github.com/catppuccin/tmux/tags for additional tags
+
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
+
+run '~/.tmux/plugins/tmux/catppuccin.tmux'
+
+# Make the status line pretty and add some modules
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
