setup nvim-tmux-navigator

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -6,6 +6,10 @@ bind-key C-a last-window
 bind-key h swap-window -t -1\; select-window -t -1
 bind-key l swap-window -t +1\; select-window -t +1
 
+# splitting windows
+bind-key s splitw
+bind-key v splitw -h
+
 # make it more pleasant
 set -g default-terminal "tmux-256color"
 
@@ -22,6 +26,7 @@ setw -g mode-keys vi
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g @plugin 'catppuccin/tmux#v2.1.2' # See https://github.com/catppuccin/tmux/tags for additional tags
 
